# composure-sim

./: Cargo.toml  README.md
crates/composure-calibration/: Cargo.toml
crates/composure-calibration/src/: lib.rs
crates/composure-cli/: Cargo.toml
crates/composure-cli/src/: main.rs  marketing_llm.rs  render.rs
crates/composure-core/: Cargo.toml
crates/composure-core/src/: compare.rs  composure.rs  counterfactual.rs  execution.rs  experiment.rs  lib.rs  monte_carlo.rs  replay.rs  report.rs  run_summary.rs  scenario.rs  sensitivity.rs  simulator.rs  state.rs  sweep_runner.rs
crates/composure-market/: Cargo.toml
crates/composure-market/src/: cohort.rs  engine.rs  lib.rs  outputs.rs  schemas.rs  transitions.rs
crates/composure-marketing/: Cargo.toml
crates/composure-marketing/examples/: synthetic_market_package.json
crates/composure-marketing/src/: concept_test.rs  idea_portfolio.rs  lib.rs  synthetic_market.rs
crates/composure-population/: Cargo.toml
crates/composure-population/src/: blueprint.rs  buyer.rs  correlated.rs  influence.rs  lib.rs  population.rs  social_graph.rs  stage.rs  traits.rs  transcript.rs
crates/composure-py/: Cargo.toml
crates/composure-py/src/: lib.rs
crates/composure-runtime/: Cargo.toml
crates/composure-runtime/src/: lib.rs
crates/composure-wasm/: Cargo.toml
crates/composure-wasm/src/: lib.rs
docs/: composure-marketing-v2-spec.md  decision-lab-roadmap.md  marketing-sim-system-roadmap.md  roadmap.md  v2-engine-roadmap.md
examples/: market-sim-example-report.md  market-sim-example.json
examples/artifacts/: README.md  baseline-monte-carlo.json  baseline-run-summary.json  calibration-candidates.csv  calibration-candidates.md  calibration-result.json  candidate-monte-carlo.json  comparison.json  counterfactual-definition.json  counterfactual-result.json  experiment-bundle-with-output.json  experiment-bundle.json  experiment-bundle.md  report.json  report.md  run-summary.json  sweep-result.json  sweep-samples.csv  sweep-samples.md  sweep-summary.md
examples/browser-inspector/: README.md  app.js  index.html  styles.css
examples/concept-test/: README.md  draft.json  draft.txt  matrix.json  request-alt.json  request.json
examples/idea-portfolio/: README.md  consumer-ai-viral-50.md  ideas.md  project-informed-50.md  randy-stack-50.md  sim-frontier-50.md
examples/idea-portfolio/results/: README.md  consumer-ai-portfolio-report.md  consumer-ai-portfolio-result.json  consumer-ai-portfolio.json  consumer-ai-viral-50-ai-agent-panel-smoke.json  consumer-ai-viral-50-ai-agent-panel-smoke.md  consumer-ai-viral-50-ai-agent-panel.json  consumer-ai-viral-50-ai-agent-panel.md  consumer-ai-viral-50-portfolio.json  consumer-ai-viral-50-report.md  consumer-ai-viral-50-result.json  consumer-ai-viral-50-run-summary.md  consumer-ai-viral-50-source-weighted-portfolio.json  consumer-ai-viral-50-source-weighted-report.md  consumer-ai-viral-50-source-weighted-result.json  project-informed-50-draft-base.json  project-informed-50-portfolio.json  project-informed-50-report.md  project-informed-50-result.json  randy-stack-50-portfolio.json  randy-stack-50-report.md  randy-stack-50-result.json  sim-frontier-50-portfolio.json  sim-frontier-50-report.md  sim-frontier-50-result.json  todays-highest-ideas-report.md
examples/idea-portfolio/scripts/: run_ai_agent_panel.mjs
examples/jury/briefs/: market-mix-gaming-biotech-social-entertainment-48.md
examples/jury/results/: all-200-jury-request.json  market-mix-48-ranking-memo-gpt55.md  market-mix-gaming-biotech-social-entertainment-24-request.json
examples/marketing/: README.md  request-v2.json  request.json
examples/marketing/brainstorm-docs/: ac-service-network-slogans-v2.json
examples/packs/: README.md
examples/packs/campaign-fatigue/: README.md  counterfactual-definition.json  experiment-spec.json  observed-trajectory.json  pack.json  scenario.json  sweep-definition.json
examples/packs/health-recovery/: README.md  counterfactual-definition.json  experiment-spec.json  observed-trajectory.json  pack.json  scenario.json  sweep-definition.json
examples/packs/supply-chain-disruption/: README.md  counterfactual-definition.json  experiment-spec.json  observed-trajectory.json  pack.json  scenario.json  sweep-definition.json
scripts/: browser-inspector-smoke.sh
