[package]
name = "composure-calibration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Deterministic calibration and fitting utilities for composure-sim"

[dependencies]
composure-core = { path = "../composure-core" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
