[package]
name = "composure-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "CLI for inspecting composure-sim experiment and sweep artifacts"

[[bin]]
name = "composure"
path = "src/main.rs"

[dependencies]
composure-core = { path = "../composure-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
