[package]
name = "composure-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Domain-agnostic simulation: Monte Carlo engine, Composure Curve analysis, event-sourced replay"

[lib]

[dependencies]
rand.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
rand.workspace = true
