[package]
name = "composure-marketing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Marketing simulation adapter built on composure-core"

[dependencies]
composure-core = { path = "../composure-core" }
composure-population = { path = "../composure-population" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
