[package]
name = "composure-population"
edition.workspace = true
description = "Synthetic buyer population generator: blueprints, trait distributions, social graphs, and influence propagation."

[dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand_distr = "0.4"
