[package]
name = "composure-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Python bindings for composure-core simulation engine"

[lib]
name = "composure_py"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { workspace = true, features = ["macros"] }
composure-core = { path = "../composure-core" }
serde_json.workspace = true
rand.workspace = true
