[package]
name = "composure-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Pack loading and runtime foundations for composure-sim"

[lib]

[dependencies]
composure-calibration = { path = "../composure-calibration" }
composure-core = { path = "../composure-core" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
