[package]
name = "composure-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "WASM bindings for composure-core simulation engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen.workspace = true
composure-core = { path = "../composure-core" }
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
rand.workspace = true
